--- a/templates/socialengresults.html
+++ b/templates/socialengresults.html
@@ -252,7 +252,7 @@
                               "Spear Phishing" is a specific type of phishing attack that appears to come from a trusted source. Attackers
                               can use information they find online to impersonate someone that the victim trusts, increasing the chance of a successful attack.
                             </p>
-                            <img src="/static/images/phishing-email.png">
+                            <img style="margin: auto;display: block;" src="/static/images/phishing-email.png">
                         </div>
                         <div class="card card-block">
                            <h5 id="privacy">Privacy</h5>
