--- a/templates/socialengresults.html
+++ b/templates/socialengresults.html
@@ -169,6 +169,7 @@
                             <div class="form-check" style="text-align: center;">
                                 <button class="submit" onclick="checkQuestion1()"> Submit! </button>
                             </div>
+                            <div id="email-results"></div>
                         </div>
 
                         <div class="card card-block">
@@ -236,6 +237,7 @@
                             <div class="form-check" style="text-align: center;">
                                 <button class="submit" onclick="checkQuestion2()"> Submit! </button>
                             </div>
+                            <div id="fake-websites-results"></div>
                         </div>
                         <div class="card card-block">
                             <h5> How do you identify fake websites? </h5>
@@ -253,6 +255,32 @@
                               can use information they find online to impersonate someone that the victim trusts, increasing the chance of a successful attack.
                             </p>
                             <img style="margin: auto;display: block;" src="/static/images/phishing-email.png">
+
+                            <div id="question3">
+                                <div id='q3-check' class="question-space"> &nbsp; </div>
+
+                                <h5> Do you think that this is a phishing email? </h5>
+
+                                <div class="form-check indent">
+                                    <label class="form-check-label">
+                                        <input class="form-check-input" type="radio" name="question3" id="q3a1" value="true"> Yes
+                                    </label>
+
+                                    <br>
+
+                                    <label class="form-check-label">
+                                        <input class="form-check-input" type="radio" name="question3" id="q3a2" value="false"> No
+                                    </label>
+
+                                    <br>
+
+                                </div>
+                            </div>
+                            <div class="form-check" style="text-align: center;">
+                                <button class="submit" onclick="checkQuestion3()"> Submit! </button>
+                            </div>
+                            <div id="phishing-results"></div>
+
                         </div>
                         <div class="card card-block">
                            <h5 id="privacy">Privacy</h5>
