--- a/templates/socialengresults.html
+++ b/templates/socialengresults.html
@@ -350,7 +350,7 @@
                             <li>For password security verification questions, use a password for all answers. The answers to most security questions are things that an attacker can find out about you.</li>
                           </ul>
                         </div>
-                        <div class="card card-block no-border"> <a id="p-button" class="btn btn-primary btn-lg btn-block" href="url_for('social_engineering_quiz')" role="button"> Take the quiz! </a> </div>
+                        <div class="card card-block no-border"> <a id="p-button" class="btn btn-primary btn-lg btn-block" href="{{ url_for('social_engineering_quiz') }}" role="button"> Take the quiz! </a> </div>
                     </div>
                 </div>
             </div>
