--- a/templates/passwords.html
+++ b/templates/passwords.html
@@ -110,7 +110,7 @@
                                         <li> No matter how long or complex a password is, it will be found if it is in the list. </li>
                                         <li> Unlike a brute force attack, dictionary attacks are not limited by time. </li>
                                         <li> The limitation is whether or not the password is in the list. </li>
-                                        <li> This type of attack exploits those who use the same password for every log-in. </li>
+
                                     </ul>
                                 </li>
                             </ul>
@@ -221,7 +221,7 @@
                             </ul>
 
                             <p> Here is one of many websites that list default passwords: &nbsp;<a href="http://www.defaultpassword.com/"><b>http://www.defaultpassword.com/</b></a></p>
-
+                            <p>In the video below you can see how default passwords can be used against you.</p>
                             <div id="pw-video" class="embed-responsive embed-responsive-16by9 m-y-2">
                                 <p> Here is one incident that highlights the potential risks of using default passwords. </p>
                                 <iframe align="middle" class="embed-responsive-item" src="//www.youtube.com/embed/P0e-L9xuy6M" allowfullscreen></iframe>
