--- a/templates/browser.html
+++ b/templates/browser.html
@@ -120,7 +120,7 @@
                                 <li> Never install an unknown plug-in. </li>
                             </ul>
                             <hr>
-                            <h6> Click on the images below to go through the steps of disabling plug-ins. </h6>
+                            <h6> First, click on your favorite browser, then click on the images below to go through the steps of disabling plug-ins. </h6>
                             <div class="card text-xs-center">
                                 <ul class="nav nav-tabs" role="tablist">
                                     <li class="nav-item"> <a class="nav-link active" data-toggle="tab" href="#chrome-plugins" role="tab">Chrome</a> </li>
