--- a/templates/browser.html
+++ b/templates/browser.html
@@ -111,7 +111,7 @@
                             <ul>
                                 <li> Applications intended for use in the web browser such as Adobe Flash. </li>
                                 <li> Plug-Ins are programs, and such, are vulnerable to many of the same problems, including being poorly written or written with malicious intentions. </li>
-                                <li> Vulnerabilities in plug-ins can also allow attackers to install malware. </li>
+                                <li> Vulnerabilities in plug-ins can also allow attackers to install malicious software. </li>
                             </ul>
                             <h5> How can you protect yourself? </h5>
                             <ul>
@@ -151,7 +151,7 @@
                                 <li> Pop-ups can lead to unintentional downloads or take you to sites you don't mean to go to. </li>
                                 <li> Some pop-ups are 'chained,' making it difficult for you to close them, as they open another one as soon as they are closed. </li>
                             </ul>
-                            <h5> How can you protect yourself? </h5>
+                            <h5> How can you take control of your cookies? </h5>
                             <ul>
                                 <li> By default, most browsers block pop-ups. </li>
                                 <li> If, for some reason, you turn off your pop-up blocker, remember to turn it back on! </li>
