--- a/templates/passwords.html
+++ b/templates/passwords.html
@@ -96,10 +96,11 @@
                                     <ul>
                                         <li> A total of 2.1 &middot; 10<sup>11</sup> possibilities exist in a password consisting of 8 lowercase letters. </li>
                                         <li> A total of 2.8 &middot; 10<sup>12</sup> possibilities exist in a password consisting of 8 mixed-case letters. </li>
-                                        <li> In general, the more types of characters and the more characters you have in your password, the better. </li>
+
                                         <li> Time is the only limiting factor in a brute force attack. </li>
-                                        <li>>Any password can be found using this method, given time. </li>
+                                        <li> Any password can be found using this method, given time. </li>
                                         <li> This type of attack exploits those with short passwords, usually under 8 characters. </li>
+                                        <li> In general, the more types of characters and the more characters you have in your password, the better. </li>
                                     </ul>
                                 </li>
                             </ul>
@@ -171,7 +172,7 @@
                                 <tbody>
                                     <tr>
                                         <th> Possible Characters </th>
-                                        <th> Search Space </th>
+                                        <th> Total Possibilities </th>
                                         <th> Attacks per Second </th>
                                         <th> Time Taken </th>
                                     </tr>
