--- a/templates/browser-quiz.html
+++ b/templates/browser-quiz.html
@@ -75,7 +75,7 @@
                             <br>
 
                             <label class="form-check-label">
-                                <input class="form-check-input" type="radio" name="question1" id="q1a2" value="false"> Javascript
+                                <input class="form-check-input" type="radio" name="question1" id="q1a2" value="false"> Plugins
                             </label>
 
                             <br>
