--- a/templates/browser.html
+++ b/templates/browser.html
@@ -189,6 +189,7 @@
                                 <li> HTTPS is a secure version of HTTP that encrypts data, providing protection from eavesdropping and tampering. </li>
                                 <li> When using a non-secure connection such as HTTP, data is sent over the network in clear text. This means that anyone on the network can view the data being sent and received. </li>
                                 <li> It is important to make sure that your connection is encrypted when entering sensitive information into a website, otherwise anyone can view this information as it travels over the network.</li>
+                                <li> Always make sure you are using a secure connection when shopping online. </li>
                                 <li> You can tell that you are using a secured connection by the &quot;https:// &quot; prefix of your URL, or by the padlock icon. The padlock icon may vary by browser, but an example is shown below.</li>
                             </ul>
                             <img style="margin: auto;display: block;" src="/static/images/https.png">
