--- a/templates/socialengineering-quiz.html
+++ b/templates/socialengineering-quiz.html
@@ -87,7 +87,7 @@
 
                         <div class="form-check indent">
                             <label class="form-check-label">
-                                <input class="form-check-input" type="radio" name="question2" id="q2a1" value="true"> The email contains personal information such as the last 4 digits of my social security number.
+                                <input class="form-check-input" type="radio" name="question2" id="q2a1" value="false"> The email contains personal information such as the last 4 digits of my social security number.
                             </label>
                         </div>
 
