--- a/templates/socialeng.html
+++ b/templates/socialeng.html
@@ -79,6 +79,8 @@
                             <h3 id="phishing" class="card-title"> Phishing and You </h3>
                             <hr>
 
+                            <p>Review the emails below and see if you think they are suspicious.</p>
+
                             <ul class="nav nav-tabs" role="tablist">
                                 <li class="nav-item"> <a class="nav-link active" data-toggle="tab" href="#level1" role="tab">Email 1</a> </li>
                                 <li class="nav-item"> <a class="nav-link" data-toggle="tab" href="#level2" role="tab">Email 2</a> </li>
@@ -165,6 +167,7 @@
                                 <li> Generic greeting </li>
                                 <li> Urgency </li>
                                 <li> False links </li>
+                                <li> Grammar mistakes</li>
                             </ul>
                         </div>
                         <div class="card card-block">
